# the-real-mle-challenge

./: .pre-commit-config.yaml  SOLUTIONS.md  pyproject.toml
preprocessing/: .pre-commit-config.yaml  Makefile  main.py  preprocessing.py  pyproject.toml
preprocessing/helpers/: loaders.py
preprocessing/preprocessor/: airbnb.py
preprocessing/tests/: conftest.py
preprocessing/tests/data/: raw.csv
preprocessing/tests/preprocessor/: test_airbnb.py
preprocessing/tests/utils/: test_loaders.py  test_savers.py
preprocessing/utils/: __init__.py  loaders.py  preprocessing.py  utils.py
src/: Makefile  pyproject.toml  server.py  train.py
src/helpers/: loaders.py  model_generation.py  savers.py
src/models/: enums.py  inference.py  responses.py
src/preprocessor/: airbnb.py  interface.py
src/tests/data/: cleaned.csv
src/tests/helpers/: test_loaders.py  test_model_generation.py  test_savers.py
src/tests/preprocessor/: test_airbnb.py
src/tests/trainings/: test_train_airbnb.py
src/tests/utils/: test_savers.py
src/trainings/: airbnb.py  interface.py
train/: Makefile  pyproject.toml
train/trainings/: airbnb.py  interface.py
