[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "the-real-mle-challenge"
version = "0.1.0"
description = "My First MLE project"
authors = [
  {name = "Javier Gil", email = "javiergilmont@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy (>=2.2.4,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "scikit-learn (>=1.6.1,<2.0.0)",
  "joblib (>=1.4.2,<2.0.0)",
  "fastapi (>=0.115.12,<0.116.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"
