[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "train"
version = "0.1.0"
description = ""
authors = [
    {name = "Javier Gil",email = "javiergilmont@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
]
